<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome Screen</string>
    <string name="linktxt">Click me to go to Calculator</string>
    <string name="wb">White Background</string>
    <string name="bb">Black Background</string>
    <string name="hp">Hide Picture</string>
    <string name="sp">Show Picture</string>
    <string name="title">My First Calculator</string>
    <string name="btnBack">Back to Welcome Screen</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="multiply">*</string>
    <string name="div">/</string>
	<string name="clear">C</string>
	<string name="koma">.</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_calculator">CalculatorActivity</string>

</resources>
